# Technica

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release.yml
docs/: architecture.md  auto-updates.md  chaos-core-export.md  importing-technica-exports-into-chaos-core.md  mobile-architecture.md  mobile-phase-1-backlog.md
docs/schemas/: dialogue-schema.md  map-schema.md  quest-schema.md
scripts/: chaosCoreDatabaseDaemon.ts  chaosCoreDatabaseSnapshot.ts  devDesktop.mjs  generateExampleExports.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database_daemon.rs  main.rs  mobile_server.rs  mobile_session.rs  mobile_state.rs
src/components/: CardFacePreview.tsx  ChaosCoreCardGallery.tsx  ChaosCoreDatabasePanel.tsx  ClassTrainingGridBoard.tsx  EditorErrorBoundary.tsx  EffectFlowComposer.tsx  ImageAssetField.tsx  IssueList.tsx  MerchantListingFields.tsx  Panel.tsx  QrCodePanel.tsx  TechnicaUpdateButton.tsx
src/data/: sampleCard.ts  sampleChassis.ts  sampleChatter.ts  sampleClass.ts  sampleCodex.ts  sampleCrafting.ts  sampleDecoration.ts  sampleDialogue.ts  sampleDish.ts  sampleDoctrine.ts  sampleFaction.ts  sampleFieldEnemy.ts  sampleFieldMod.ts  sampleGear.ts  sampleItem.ts  sampleKeyItem.ts  sampleMail.ts  sampleMap.ts  sampleNpc.ts  sampleOperation.ts  sampleQuest.ts  sampleSchema.ts  sampleUnit.ts
src/hooks/: useChaosCoreDatabase.tsx  (+3 more)
(+112 files in other folders)
