[package]
name = "technica"
version = "1.2.0"
description = "Technica content authoring app"
authors = ["OpenAI Codex"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tiny_http = "0.12"
